events_parser/EventsParser.py
# Generated from events_parser\Events.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO

from events import *



class EventsParser ( Parser ):

    grammarFileName = "Events.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'------------------------------------------------------------'", 
                     "'InitGame:'", "'InitRound:'", "'InitAuth:'", "'ShutdownGame:'", 
                     "'Warmup:'", "'Session data initialised for client on slot'", 
                     "'ClientConnect:'", "'ClientDisconnect:'", "'ClientBegin:'", 
                     "'ClientSpawn:'", "'ClientUserinfo:'", "'ClientUserinfoChanged:'", 
                     "'AccountValidated:'", "'say:'", "'saytell:'", "'sayteam:'", 
                     "'tell:'", "'Kill:'", "'Item:'", "'Flag:'", "'FlagCaptureTime:'", 
                     "'\\'", "'/'", "','", "'<'", "'>'", "':'", "';'", "'.'", 
                     "'_'", "'-'", "'+'", "'\"'", "'('", "')'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "SEPARATOR", "INITGAME", "INITROUND", 
                      "INITAUTH", "SHUTDOWNGAME", "WARMUP", "SESSION_DATA_INITIALISED", 
                      "CLIENTCONNECT", "CLIENTDISCONNECT", "CLIENTBEGIN", 
                      "CLIENTSPAWN", "CLIENTUSERINFO", "CLIENTUSERINFOCHANGED", 
                      "ACCOUNTVALIDATED", "SAY", "SAYTELL", "SAYTEAM", "TELL", 
                      "KILL", "ITEM", "FLAG", "FLAGCAPTURETIME", "BACK_SLASH", 
                      "SLASH", "COMMA", "INFERIOR", "SUPERIOR", "COLON", 
                      "SEMICOLON", "DOT", "UNDERSCORE", "MINUS", "PLUS", 
                      "DOUBLE_QUOTE", "ROUND_BRACKET_LEFT", "ROUND_BRACKET_RIGHT", 
                      "SQUARE_BRACKET_LEFT", "SQUARE_BRACKET_RIGHT", "WHITESPACE", 
                      "NEWLINE", "LETTER", "DIGIT" ]

    RULE_events = 0
    RULE_event = 1
    RULE_separatorEvent = 2
    RULE_initGameEvent = 3
    RULE_initRoundEvent = 4
    RULE_initAuthEvent = 5
    RULE_shutdownGameEvent = 6
    RULE_warmupEvent = 7
    RULE_sessionDataInitEvent = 8
    RULE_clientConnectEvent = 9
    RULE_clientDisconnectEvent = 10
    RULE_clientBeginEvent = 11
    RULE_clientSpawnEvent = 12
    RULE_clientUserinfoEvent = 13
    RULE_clientUserinfoChangedEvent = 14
    RULE_accountValidatedEvent = 15
    RULE_sayEvent = 16
    RULE_sayTellEvent = 17
    RULE_sayTeamEvent = 18
    RULE_tellEvent = 19
    RULE_killEvent = 20
    RULE_itemEvent = 21
    RULE_flagEvent = 22
    RULE_flagCaptureTimeEvent = 23
    RULE_intValue = 24
    RULE_wordValue = 25
    RULE_sentenceValue = 26

    ruleNames =  [ "events", "event", "separatorEvent", "initGameEvent", 
                   "initRoundEvent", "initAuthEvent", "shutdownGameEvent", 
                   "warmupEvent", "sessionDataInitEvent", "clientConnectEvent", 
                   "clientDisconnectEvent", "clientBeginEvent", "clientSpawnEvent", 
                   "clientUserinfoEvent", "clientUserinfoChangedEvent", 
                   "accountValidatedEvent", "sayEvent", "sayTellEvent", 
                   "sayTeamEvent", "tellEvent", "killEvent", "itemEvent", 
                   "flagEvent", "flagCaptureTimeEvent", "intValue", "wordValue", 
                   "sentenceValue" ]

    EOF = Token.EOF
    SEPARATOR=1
    INITGAME=2
    INITROUND=3
    INITAUTH=4
    SHUTDOWNGAME=5
    WARMUP=6
    SESSION_DATA_INITIALISED=7
    CLIENTCONNECT=8
    CLIENTDISCONNECT=9
    CLIENTBEGIN=10
    CLIENTSPAWN=11
    CLIENTUSERINFO=12
    CLIENTUSERINFOCHANGED=13
    ACCOUNTVALIDATED=14
    SAY=15
    SAYTELL=16
    SAYTEAM=17
    TELL=18
    KILL=19
    ITEM=20
    FLAG=21
    FLAGCAPTURETIME=22
    BACK_SLASH=23
    SLASH=24
    COMMA=25
    INFERIOR=26
    SUPERIOR=27
    COLON=28
    SEMICOLON=29
    DOT=30
    UNDERSCORE=31
    MINUS=32
    PLUS=33
    DOUBLE_QUOTE=34
    ROUND_BRACKET_LEFT=35
    ROUND_BRACKET_RIGHT=36
    SQUARE_BRACKET_LEFT=37
    SQUARE_BRACKET_RIGHT=38
    WHITESPACE=39
    NEWLINE=40
    LETTER=41
    DIGIT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EventsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # EventContext

        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.EventContext)
            else:
                return self.getTypedRuleContext(EventsParser.EventContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.NEWLINE)
            else:
                return self.getToken(EventsParser.NEWLINE, i)

        def getRuleIndex(self):
            return EventsParser.RULE_events

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvents" ):
                listener.enterEvents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvents" ):
                listener.exitEvents(self)




    def events(self):

        localctx = EventsParser.EventsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_events)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            localctx.value = []
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << EventsParser.MINUS) | (1 << EventsParser.WHITESPACE) | (1 << EventsParser.DIGIT))) != 0):
                self.state = 55
                localctx.a = self.event()
                localctx.value.append(localctx.a.value)
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==EventsParser.NEWLINE:
                    self.state = 57
                    self.match(EventsParser.NEWLINE)


                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # IntValueContext
            self.b = None # IntValueContext
            self.separatorEvt = None # SeparatorEventContext
            self.initGameEvt = None # InitGameEventContext
            self.initRoundEvt = None # InitRoundEventContext
            self.initAuthEvt = None # InitAuthEventContext
            self.shutdownGameEvt = None # ShutdownGameEventContext
            self.warmupEvt = None # WarmupEventContext
            self.sessionDataInitEvt = None # SessionDataInitEventContext
            self.clientConnectEvt = None # ClientConnectEventContext
            self.clientDisconnectEvt = None # ClientDisconnectEventContext
            self.clientBeginEvt = None # ClientBeginEventContext
            self.clientSpawnEvt = None # ClientSpawnEventContext
            self.clientUserinfoEvt = None # ClientUserinfoEventContext
            self.clientUserinfoChangedEvt = None # ClientUserinfoChangedEventContext
            self.accountValidatedEvt = None # AccountValidatedEventContext
            self.sayEvt = None # SayEventContext
            self.sayTellEvt = None # SayTellEventContext
            self.sayTeamEvt = None # SayTeamEventContext
            self.tellEvt = None # TellEventContext
            self.killEvt = None # KillEventContext
            self.itemEvt = None # ItemEventContext
            self.flagEvt = None # FlagEventContext
            self.flagCaptureTimeEvt = None # FlagCaptureTimeEventContext

        def COLON(self):
            return self.getToken(EventsParser.COLON, 0)

        def WHITESPACE(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.WHITESPACE)
            else:
                return self.getToken(EventsParser.WHITESPACE, i)

        def intValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.IntValueContext)
            else:
                return self.getTypedRuleContext(EventsParser.IntValueContext,i)


        def separatorEvent(self):
            return self.getTypedRuleContext(EventsParser.SeparatorEventContext,0)


        def initGameEvent(self):
            return self.getTypedRuleContext(EventsParser.InitGameEventContext,0)


        def initRoundEvent(self):
            return self.getTypedRuleContext(EventsParser.InitRoundEventContext,0)


        def initAuthEvent(self):
            return self.getTypedRuleContext(EventsParser.InitAuthEventContext,0)


        def shutdownGameEvent(self):
            return self.getTypedRuleContext(EventsParser.ShutdownGameEventContext,0)


        def warmupEvent(self):
            return self.getTypedRuleContext(EventsParser.WarmupEventContext,0)


        def sessionDataInitEvent(self):
            return self.getTypedRuleContext(EventsParser.SessionDataInitEventContext,0)


        def clientConnectEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientConnectEventContext,0)


        def clientDisconnectEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientDisconnectEventContext,0)


        def clientBeginEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientBeginEventContext,0)


        def clientSpawnEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientSpawnEventContext,0)


        def clientUserinfoEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientUserinfoEventContext,0)


        def clientUserinfoChangedEvent(self):
            return self.getTypedRuleContext(EventsParser.ClientUserinfoChangedEventContext,0)


        def accountValidatedEvent(self):
            return self.getTypedRuleContext(EventsParser.AccountValidatedEventContext,0)


        def sayEvent(self):
            return self.getTypedRuleContext(EventsParser.SayEventContext,0)


        def sayTellEvent(self):
            return self.getTypedRuleContext(EventsParser.SayTellEventContext,0)


        def sayTeamEvent(self):
            return self.getTypedRuleContext(EventsParser.SayTeamEventContext,0)


        def tellEvent(self):
            return self.getTypedRuleContext(EventsParser.TellEventContext,0)


        def killEvent(self):
            return self.getTypedRuleContext(EventsParser.KillEventContext,0)


        def itemEvent(self):
            return self.getTypedRuleContext(EventsParser.ItemEventContext,0)


        def flagEvent(self):
            return self.getTypedRuleContext(EventsParser.FlagEventContext,0)


        def flagCaptureTimeEvent(self):
            return self.getTypedRuleContext(EventsParser.FlagCaptureTimeEventContext,0)


        def getRuleIndex(self):
            return EventsParser.RULE_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvent" ):
                listener.enterEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvent" ):
                listener.exitEvent(self)




    def event(self):

        localctx = EventsParser.EventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==EventsParser.WHITESPACE:
                self.state = 65
                self.match(EventsParser.WHITESPACE)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            localctx.a = self.intValue()
            self.state = 72
            self.match(EventsParser.COLON)
            self.state = 73
            localctx.b = self.intValue()
            self.state = 74
            self.match(EventsParser.WHITESPACE)
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 75
                localctx.separatorEvt = self.separatorEvent()
                localctx.value = localctx.separatorEvt.value
                pass

            elif la_ == 2:
                self.state = 78
                localctx.initGameEvt = self.initGameEvent()
                localctx.value = localctx.initGameEvt.value
                pass

            elif la_ == 3:
                self.state = 81
                localctx.initRoundEvt = self.initRoundEvent()
                localctx.value = localctx.initRoundEvt.value
                pass

            elif la_ == 4:
                self.state = 84
                localctx.initAuthEvt = self.initAuthEvent()
                localctx.value = localctx.initAuthEvt.value
                pass

            elif la_ == 5:
                self.state = 87
                localctx.shutdownGameEvt = self.shutdownGameEvent()
                localctx.value = localctx.shutdownGameEvt.value
                pass

            elif la_ == 6:
                self.state = 90
                localctx.warmupEvt = self.warmupEvent()
                localctx.value = localctx.warmupEvt.value
                pass

            elif la_ == 7:
                self.state = 93
                localctx.sessionDataInitEvt = self.sessionDataInitEvent()
                localctx.value = localctx.sessionDataInitEvt.value
                pass

            elif la_ == 8:
                self.state = 96
                localctx.clientConnectEvt = self.clientConnectEvent()
                localctx.value = localctx.clientConnectEvt.value
                pass

            elif la_ == 9:
                self.state = 99
                localctx.clientDisconnectEvt = self.clientDisconnectEvent()
                localctx.value = localctx.clientDisconnectEvt.value
                pass

            elif la_ == 10:
                self.state = 102
                localctx.clientBeginEvt = self.clientBeginEvent()
                localctx.value = localctx.clientBeginEvt.value
                pass

            elif la_ == 11:
                self.state = 105
                localctx.clientSpawnEvt = self.clientSpawnEvent()
                localctx.value = localctx.clientSpawnEvt.value
                pass

            elif la_ == 12:
                self.state = 108
                localctx.clientUserinfoEvt = self.clientUserinfoEvent()
                localctx.value = localctx.clientUserinfoEvt.value
                pass

            elif la_ == 13:
                self.state = 111
                localctx.clientUserinfoChangedEvt = self.clientUserinfoChangedEvent()
                localctx.value = localctx.clientUserinfoChangedEvt.value
                pass

            elif la_ == 14:
                self.state = 114
                localctx.accountValidatedEvt = self.accountValidatedEvent()
                localctx.value = localctx.accountValidatedEvt.value
                pass

            elif la_ == 15:
                self.state = 117
                localctx.sayEvt = self.sayEvent()
                localctx.value = localctx.sayEvt.value
                pass

            elif la_ == 16:
                self.state = 120
                localctx.sayTellEvt = self.sayTellEvent()
                localctx.value = localctx.sayTellEvt.value
                pass

            elif la_ == 17:
                self.state = 123
                localctx.sayTeamEvt = self.sayTeamEvent()
                localctx.value = localctx.sayTeamEvt.value
                pass

            elif la_ == 18:
                self.state = 126
                localctx.tellEvt = self.tellEvent()
                localctx.value = localctx.tellEvt.value
                pass

            elif la_ == 19:
                self.state = 129
                localctx.killEvt = self.killEvent()
                localctx.value = localctx.killEvt.value
                pass

            elif la_ == 20:
                self.state = 132
                localctx.itemEvt = self.itemEvent()
                localctx.value = localctx.itemEvt.value
                pass

            elif la_ == 21:
                self.state = 135
                localctx.flagEvt = self.flagEvent()
                localctx.value = localctx.flagEvt.value
                pass

            elif la_ == 22:
                self.state = 138
                localctx.flagCaptureTimeEvt = self.flagCaptureTimeEvent()
                localctx.value = localctx.flagCaptureTimeEvt.value
                pass


            localctx.value.minutes = int((None if localctx.a is None else self._input.getText(localctx.a.start,localctx.a.stop)))
            localctx.value.seconds = int((None if localctx.b is None else self._input.getText(localctx.b.start,localctx.b.stop)))
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SeparatorEventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None

        def SEPARATOR(self):
            return self.getToken(EventsParser.SEPARATOR, 0)

        def getRuleIndex(self):
            return EventsParser.RULE_separatorEvent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSeparatorEvent" ):
                listener.enterSeparatorEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSeparatorEvent" ):
                listener.exitSeparatorEvent(self)




    def separatorEvent(self):

        localctx = EventsParser.SeparatorEventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_separatorEvent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(EventsParser.SEPARATOR)
            localctx.value = SeparatorEvent()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitGameEventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # WordValueContext
            self.b = None # SentenceValueContext

        def INITGAME(self):
            return self.getToken(EventsParser.INITGAME, 0)

        def WHITESPACE(self):
            return self.getToken(EventsParser.WHITESPACE, 0)

        def BACK_SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.BACK_SLASH)
            else:
                return self.getToken(EventsParser.BACK_SLASH, i)

        def wordValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.WordValueContext)
            else:
                return self.getTypedRuleContext(EventsParser.WordValueContext,i)


        def sentenceValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.SentenceValueContext)
            else:
                return self.getTypedRuleContext(EventsParser.SentenceValueContext,i)


        def getRuleIndex(self):
            return EventsParser.RULE_initGameEvent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitGameEvent" ):
                listener.enterInitGameEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitGameEvent" ):
                listener.exitInitGameEvent(self)




    def initGameEvent(self):

        localctx = EventsParser.InitGameEventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_initGameEvent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(EventsParser.INITGAME)
            self.state = 150
            self.match(EventsParser.WHITESPACE)
            localctx.value = InitGameEvent()
            self.state = 158 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 152
                self.match(EventsParser.BACK_SLASH)
                self.state = 153
                localctx.a = self.wordValue()
                self.state = 154
                self.match(EventsParser.BACK_SLASH)
                self.state = 155
                localctx.b = self.sentenceValue()
                localctx.value.parameters[(None if localctx.a is None else self._input.getText(localctx.a.start,localctx.a.stop))]=(None if localctx.b is None else self._input.getText(localctx.b.start,localctx.b.stop))
                self.state = 160 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EventsParser.BACK_SLASH):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitRoundEventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # WordValueContext
            self.b = None # SentenceValueContext

        def INITROUND(self):
            return self.getToken(EventsParser.INITROUND, 0)

        def WHITESPACE(self):
            return self.getToken(EventsParser.WHITESPACE, 0)

        def BACK_SLASH(self, i:int=None):
            if i is None:
                return self.getTokens(EventsParser.BACK_SLASH)
            else:
                return self.getToken(EventsParser.BACK_SLASH, i)

        def wordValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.WordValueContext)
            else:
                return self.getTypedRuleContext(EventsParser.WordValueContext,i)


        def sentenceValue(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EventsParser.SentenceValueContext)
            else:
                return self.getTypedRuleContext(EventsParser.SentenceValueContext,i)


        def getRuleIndex(self):
            return EventsParser.RULE_initRoundEvent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitRoundEvent" ):
                listener.enterInitRoundEvent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitRoundEvent" ):
                listener.exitInitRoundEvent(self)




    def initRoundEvent(self):

        localctx = EventsParser.InitRoundEventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initRoundEvent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(EventsParser.INITROUND)
            self.state = 163
            self.match(EventsParser.WHITESPACE)
            localctx.value = InitRoundEvent()
            self.state = 171 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 165
                self.match(EventsParser.BACK_SLASH)
                self.state = 166
                localctx.a = self.wordValue()
                self.state = 167
                self.match(EventsParser.BACK_SLASH)
                self.state = 168
                localctx.b = self.sentenceValue()
                localctx.value.parameters[(None if localctx.a is None else self._input.getText(localctx.a.start,localctx.a.stop))]=(None if localctx.b is None else self._input.getText(localctx.b.start,localctx.b.stop))
                self.state = 173 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==EventsParser.BACK_SLASH):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitAuthEventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value = None
            self.a = None # WordValueContext
            self.b = None # SentenceValueContext

        def INITAUTH(self):
            return self.getToken(EventsParser.INITAUTH, 0)

        def WHITESPACE(self):
            return self.getToken(EventsParser.WHITESPACE, 0)
